<resources>
    <string name="app_name">ProfileDemo</string>
    <string name="main_activity_name">All Profiles</string>
    <string name="add_profile_activity_name">Add New Profile</string>

    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <string name="edit_profile_description">Describe your profileEntity&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="gender">Gender</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="device">Device</string>
    <string name="no_profiles">No profiles created yet, please click fab button to add some profiles!</string>
    <string name="no_filtered_profiles">There are no profiles on the selected dates!</string>
</resources>