<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/contact_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:text="Add Profile"
                android:textColor="#ce3232"
                android:textSize="40sp"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="Phone"
                android:inputType="phone" />
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textColor="@android:color/primary_text_light" />

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"
                    android:theme="@style/CustomRadioButton" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:theme="@style/CustomRadioButton" />

                <RadioButton
                    android:id="@+id/rb_others"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/others"
                    android:theme="@style/CustomRadioButton" />

            </RadioGroup>
            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="8dp"
                android:text="@string/device"
                android:textColor="@android:color/primary_text_light" />


            <RadioGroup
                android:id="@+id/rg_device"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/rb_android"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/android"
                    android:theme="@style/CustomRadioButton" />

                <RadioButton
                    android:id="@+id/rb_ios"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ios"
                    android:theme="@style/CustomRadioButton" />

                <RadioButton
                    android:id="@+id/rb_other_device"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/others"
                    android:theme="@style/CustomRadioButton" />

            </RadioGroup>


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:breakStrategy="balanced"
                android:fitsSystemWindows="true"
                android:gravity="top"
                android:hint="Enter Profile(Bio)"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:singleLine="false" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Submit"
                android:textColor="#fff" />
        </LinearLayout>

    </ScrollView>

</layout>